Order : fast between commands Cheack : fast track, logical update